Fixed various page alignment issues (line 86 in commons_roots-style.css and lines 34 - 41 in styles.css and line 568 in styles.css)

--- a/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
+++ b/docroot/profiles/drupal_commons/themes/commons_environs/css/styles.css
@@ -35,11 +35,11 @@ h1.title {
   font-weight: bold;
   font-size: 22px;
   color: #736357;
-  margin: 0 0 8px 2px;
+  margin: 0 0 8px 14px;
 }
 
 .breadcrumbs {
-  margin-left: 5px;
+  margin-left: 15px;
 }
 
 h3 {
@@ -566,6 +566,7 @@ form input.form-submit, .views-exposed-form .views-exposed-widget input.form-sub
 }
 
 #homebox-buttons {
+	margin-left: 2px;
 }
 
 button, #homebox-buttons button {
