--- a/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
+++ b/docroot/profiles/drupal_commons/themes/commons_roots/css/commons_roots-style.css
@@ -84,7 +84,7 @@
 }
 
 #primary-menu-inner {
-  margin-left: 0;
+  margin-left: 0px;
 }
 
 /* styles for Superfish primary menu */
